[package]
name = "xensieve"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Ariza"]
homepage = "https://github.com/flexatone/xensieve-rs"
repository = "https://github.com/flexatone/xensieve-rs"
license = "MIT"
license-file = "LICENSE"
keywords = ["sieve", "residual", "modulus", "set", "xenakis"]
categories = [
    "mathematics",
    "data-structures",
]

[dependencies]
